# basic_player

./: .gitignore  Cargo.toml
src/: download.rs  get_info.rs  lib.rs  main.rs  main1.rs  main_old.rs  metadata.rs  play.rs  player.rs  terminal_image.rs  ui.rs
