[package]
name = "basic_player"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
audiotags = "0.4.1"
chrono = "0.4.26"
crossterm = "0.26.1"
device_query = "1.1.3"
id3 = "1.7.0"
mp3-duration = "0.1.10"
ogg_metadata = "0.4.1"
pausable_clock = "1.0.1"
ratatui = { version = "0.21.0", features = ["all-widgets"] }
rodio = "0.17.1"
serde = { version = "1.0.171", features = ["derive"] }
serde_json = "1.0.102"
